--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -2,6 +2,45 @@
 </div>
 
 <div class="messages">
+
+  <div class="message">
+
+    <div class="upper-message">
+      <div class="message-user">
+      Tom
+      </div>
+      <div class="message-date">
+        2022/04/11(mon) 21:00:00
+      </div>
+    </div>
+
+    <div class="lower-message">
+      <div class="message-content">
+        おはよう
+      </div>
+    </div>
+
+  </div>
+
+  <div class="message">
+
+    <div class="upper-message">
+      <div class="message-user">
+      Jack
+      </div>
+      <div class="message-date">
+        2022/04/11(mon) 21:30:00
+      </div>
+    </div>
+
+    <div class="lower-message">
+      <div class="message-content">
+        おはよう
+      </div>
+    </div>
+    
+  </div>
+
 </div>
 
 <div class="form">
