--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,10 +1,22 @@
 <div class="chat-header">
+
+  <div class="reft-header">
+    <div class="header-title">
+      hogefuga
+    </div>
+  </div>
+
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
+
 </div>
 
 <div class="messages">
 
   <div class="message">
-
     <div class="upper-message">
       <div class="message-user">
       Tom
@@ -19,11 +31,9 @@
         おはよう
       </div>
     </div>
-
   </div>
 
   <div class="message">
-
     <div class="upper-message">
       <div class="message-user">
       Jack
@@ -38,10 +48,17 @@
         おはよう
       </div>
     </div>
-    
   </div>
 
 </div>
 
 <div class="form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+     <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input class="form-submit" type="submit" value="送信">
 </div>
