--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,4 @@
 <div class="chat-header">
-
   <div class="reft-header">
     <div class="header-title">
       hogefuga
@@ -11,45 +10,10 @@
       <a href="#">チャットを終了する</a>
     </div>
   </div>
-
 </div>
 
 <div class="messages">
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-      Tom
-      </div>
-      <div class="message-date">
-        2022/04/11(mon) 21:00:00
-      </div>
-    </div>
-
-    <div class="lower-message">
-      <div class="message-content">
-        おはよう
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-      Jack
-      </div>
-      <div class="message-date">
-        2022/04/11(mon) 21:30:00
-      </div>
-    </div>
-
-    <div class="lower-message">
-      <div class="message-content">
-        おはよう
-      </div>
-    </div>
-  </div>
-
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
